fixed volume, added scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,12 @@ html {
   flex-direction: column;
   align-items: center;
   background: rgb(80, 77, 77);
- }
+}
 
 header {
   width: 290px;
   height: 150px;
+
 }
 
 body {
@@ -22,14 +23,15 @@ body {
   align-items: center;
   width: 300px;
   height: 700px;
+  margin-top: 20px;
+  box-shadow: 15px 15px 25px 0px black;
 }
 
 #container {
   display:flex;
   flex-direction: column;
   align-items: center;
-  background: black;
-  margin-top: 20px;
+  background: black; 
   border: solid 10px rgb(8, 135, 194);
 }
 .playerCtl {
@@ -71,16 +73,22 @@ body {
   margin-right: 10px;
   width: 100%;
   height: 10px;
+  
 }
 
 #progress {
   height: 10px;
-  background: green;
+  display: flex;
+  background: rgb(0, 255, 0);
 }
 
 .headline p {
   width: 80px;
   text-align: center;
+}
+
+#info {
+  text-shadow: 10px 7px 3px rgb(0, 0, 0);
 }
 
 marquee {
@@ -90,28 +98,130 @@ marquee {
   width: 80%;
   height: 100%;
   border: blue solid 1px;
-  background: rgb(28, 28, 28);
+  background: rgb(40, 40, 40);
+  
 }
 
 #volume {
-  width: 270px;
+  width: 240px;
   cursor: pointer;
+  margin-left: 10px; 
+}
+
+#volCtl {
+  display: flex;
+  width: 270px;
+}
+
+#mute {
+  width: 20%;
+  margin-right: 10px;
+}
+
+#unmute {
+  background:rgb(255, 0, 0);
+  width: 20%;
+  margin-right: 10px;
 }
 
 .controls {
   display: flex;
   height: 25px;
   margin: 9px 5px 0px 5px;
+  /* border-bottom: solid black 7px; */
+ 
+}
+
+#playBtn {
+  display: flex;
+  justify-content: center;
+}
+
+#playIcon {
+  height: 0;
+  width: 0;
+  border-top: 6px solid transparent;
+  border-left: 12px solid black;
+  border-bottom: 6px solid transparent; 
+}
+
+#stopBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#stopIcon {
+  height: 14px;
+  width: 11px;
+  background: black;
+}
+
+#pauseBtn{
+  display: flex;
+  justify-content: center;
+}
+
+#pauseIconl{
+  background: black;
+  width: 3px;
+  height: 15px;
+  margin-right: 1.5px;
+}
+
+#pauseIconr{
+  background: black;
+  width: 3px;
+  height: 15px;
+  margin-left: 1.5px;
 }
 
 #prevBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 10px 0px 0px 10px;
   margin-right: 2.5px;
 }
 
+#prevl{
+  height: 0;
+  width: 0;
+  border-top: 6px solid transparent;
+  border-right: 12px solid black;
+  border-bottom: 6px solid transparent;
+}
+
+#prevr{
+  height: 0;
+  width: 0;
+  border-top: 6px solid transparent;
+  border-right: 12px solid black;
+  border-bottom: 6px solid transparent;
+}
+
 #nextBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 0px 10px 10px 0px;
   margin-left: 2.5px;
+}
+
+#nextl{
+  height: 0;
+  width: 0;
+  border-top: 6px solid transparent;
+  border-left: 12px solid black;
+  border-bottom: 6px solid transparent;
+}
+
+#nextr{
+  height: 0;
+  width: 0;
+  border-top: 6px solid transparent;
+  border-left: 12px solid black;
+  border-bottom: 6px solid transparent;
 }
 
 button {
@@ -134,9 +244,6 @@ img{
 }
 
 #playlist {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
   border-color: black;
   border-style:  solid;
   border-width: 5px 10px 5px 10px;
@@ -146,8 +253,18 @@ img{
   margin-bottom: 10px;
   padding: 10px 0px 0px 0px;
   background: rgb( 40, 40, 40);
+  overflow-y: scroll;
 }
 
+#playlist::-webkit-scrollbar {
+  width: 10px;
+  background: rgb( 20, 20, 20);
+}
+
+#playlist::-webkit-scrollbar-thumb {
+  background: rgb(60, 60, 60);
+  border-radius: 5px;
+} 
 
 li {
   padding: 2.5px 0px 2.5px 0px;
